# podcast_player

./: .gitignore  LICENSE  README.md  build_exe.bat  conversation-2025-08-02-010714.txt  fix_log_202508020140.md  podcast_player.py  pyproject.toml  refine_list.md  requirements.txt  setup.py
config/: config_example.py  my_stations.json.example
data/: .gitkeep
docs/: integration_guide.md
docs/development/: worklog_20250729_0.md  worklog_20250729_1.md  worklog_20250729_2.md
docs/examples/: example_integration.py  example_rss_usage.py
scripts/: build.py
src/: run.py
src/podcast_player/: __init__.py  main.py
src/podcast_player/core/: __init__.py  audio_player.py  config_manager.py  error_handler.py  logger.py  playback_memory.py  playlist_manager.py  progress_tracker.py  rss_processor.py  station_manager.py
src/podcast_player/core/config/: window_settings.json
src/podcast_player/data/: __init__.py  models.py
src/podcast_player/managers/: font_manager.py
src/podcast_player/ui/: __init__.py  components.py  event_handlers.py  main_window.py  preferences_dialog.py  theme_manager.py
src/podcast_player/utils/: __init__.py  file_utils.py  network_utils.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
